src/Components/Certificate/Certificate.module.css
.section {
    /* width: 80%; */
    height: 380px;
    margin-left: 70px;
    margin-top: 80px;
    display: flex;
    align-items: center;
    justify-content: center;
    gap: 20px;
    padding: 40px;
    /* background-color: #005eff; */
    border-radius: 12px;
    color: #ffffff;
    /* box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.1); */
}

/* Certificates Section */
.certificates {
    /* height: 360px; */
    padding-top: 30px;
    padding-right: 70px;
    padding-bottom: 30px;
    padding-left: 70px;
    display: flex;
    align-items: center;
    gap: 20px;
    border-radius: 20px;
    background-color: #005BBF;
}

.certificateCard {
    background-color: #ffffff;
    border-radius: 16px;
    padding: 16px;
    box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.2);
    overflow: hidden;
    width: 500px;
    height: 350px;
}

.certificateImage {
    width: 210px;
    /* margin-top: -17px;
    margin-left: -17px; */
    /* margin-bottom: -20px; */
    height: auto;
    object-fit: cover;
    border-radius: 12px;
    height: 100%;
    width: 100%;
    /* border: 2px solid green; */
}

/* Benefits Section */
.benefits {
    /* width: 220px; */
    margin-left: 25px;
    display: flex;
    flex-direction: column;
    gap: 20px;
    align-items: center;
    justify-content: center;
    flex: 1;
    padding: 20px;
    background-color: #ffffff;
    border-radius: 12px;
    color: #005eff;
    /* border: 2px solid #005eff; */
}

.benefitsss {
    width: 120px;
    height: 45px;
    margin-top: -20px;
    margin-left: 300px;
    /* padding: 25px 10px; */
    border-radius: 10px;
    background-color: #F5F5F5;
    border: none;
    font-style: "Raleway", sans-serif;
    font-weight: 500;
    font-size: 16px;
    color: #005BBF;
    /* border: 2px solid green; */
}

.benefitsTitle {
    font-style: "Inter", sans-serif;
    font-size: 40px;
    font-weight: 700;
    margin-bottom: 20px;
    color: #0047B2;
    /* border: 2px solid red; */
    text-align: center;
}

.benefitsList {
    list-style: none;
    padding: 0;
    /* margin-left: -80px; */
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    /* border: 2px solid #005eff; */
}




.benefitItem {
    width: 450px;
    height: 100px;
    display: flex;
    align-items: center;
    /* gap: 12px; */
    /* margin-bottom: 20px; */
    /* border: 2px solid red; */
}

/* .benefitIcon {
    width: 32px;
    height: 32px;
} */

.benefitIcon img {
    width: 20px;
    height: 20px;
}

.benefitText {
    margin-top: -5px;
    margin-left: -20px;
    font-style: "Raleway", sans-serif;
    font-weight: 500;
    font-size: 16px;
    color: #696984;
}

@media only screen and (max-width: 600px) {
    .section {
        flex-direction: column;
        width: 100%;
        margin-left: 0;
        padding: 0;
        height: 80%;
    }

    /* Certificates Section */
    .certificates {
        width: 90%;
        padding: 30px 0;
    }

    .certificateCard {
        width: 80%;
        height: 225px;
        margin: auto;
    }


    /* Benefits Section */
    .benefits {
        width: 95%;
        margin-left: 0;
        padding: 0;
    }

    .benefitsTitle {
        margin: 0 0 20px 0;
        font-size: 38px;
        width: 100%;
    }

    .benefitsList {
        width: 100%;
        list-style: none;
        padding: 0;
    }




    .benefitItem {

        width: 100%;
        height: 100px;
        display: flex;
        align-items: center;
        margin-left: -45px;
    }




}

